--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "angular-gaming-site",
   "version": "0.0.0",
   "license": "MIT",
+  "description": "Gaming Site using Stack MEAN",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,7 +22,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
+    "express": "^4.15.2",
+    "mdi": "^1.9.33",
+    "mongoose": "^4.9.4",
+    "ng2-materialize": "^1.3.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -41,6 +48,7 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "nodemon": "^1.11.0"
   }
 }
