--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.4.0",
     "mdi": "^1.9.33",
     "mongoose": "^4.9.4",
+    "mongoose-unique-validator": "^1.0.5",
     "ng2-materialize": "^1.3.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
@@ -42,13 +45,13 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "nodemon": "^1.11.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0",
-    "nodemon": "^1.11.0"
+    "typescript": "~2.2.0"
   }
 }
